correcting flex box functionality to stretch box 1 larger

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </aside>
 
     -->
-        <div class="flexcontainer1">
-            <article id="About-Me" class="About-Me">
-                <img src="./assets/images/selfie.png" class="float-left" alt="selfie photo" />
+        <section class="about-me">
+            <article id="About-Me" class="card0">
+                <img src="./assets/images/selfie.png" class="float-left" alt="selfie photo">
                 <!--
                     <h2>About Me</h2>
                 -->
@@ -60,7 +60,7 @@
 
                 </p>
             </article>
-        </div>
+        </section>
         <div class="hidden">
             <article id="My-Work" class="My-Work">
                 <!--
@@ -69,7 +69,7 @@
                      -->
         </div>
         <div class="layout">
-            <section class="card">
+            <section class="card1">
                 <header>
                     <h2>My First Project Ever</h2>
                 </header>
@@ -83,7 +83,7 @@
 
                 </article>
             </section>
-            <section class="card">
+            <section class="card2">
                 <header>
                     <h2>Prework Study Guide</h2>
                 </header>
@@ -96,7 +96,7 @@
                     </p>
                 </article>
             </section>
-            <section class="card">
+            <section class="card3">
                 <header>
                     <h2>Horiseon Project</h2>
                 </header>
@@ -109,7 +109,7 @@
                     </p>
                 </article>
             </section>
-            <section class="card">
+            <section class="card4">
                 <header>
                     <h2>Future Project #1</h2>
                 </header>
@@ -126,7 +126,7 @@
                 </article>
 
             </section>
-            <section class="card">
+            <section class="card5">
                 <header>
                     <h2>Future Project #2</h2>
                 </header>
@@ -141,7 +141,7 @@
                 </article>
 
             </section>
-            <section class="card">
+            <section class="card6">
                 <header>
                     <h2>Future Project #3</h2>
                 </header>
