--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
     <main>
 
-        <!--        <aside class="sections">
+        <!--       
+        -->
+        <aside class="sections">
             <section class="about-me">
                 <h3>About Me</h3>
             </section>
@@ -43,133 +45,116 @@
             </section>
         </aside>
 
-    -->
-        <section class="about-me">
+        <section class="content">
             <article id="About-Me" class="card0">
                 <img src="./assets/images/selfie.png" class="float-left" alt="selfie photo">
-                <!--
-                    <h2>About Me</h2>
-                -->
-
-                <p>My name is Jonah Kane. I am a rookie web developer with very limited experience but a whole lot of
-                    drive and desire to learn.
+                <h2>About Me</h2>
+                <p>
+                    My name is Jonah Kane. I am a brand new rookie web developer with very limited experience but I have
+                    a whole lot of drive and desire to learn.
                     I decided to get into this crazy world becuase I lost my job. I spent the last 5 years of my
                     professional career working as a Dispatch Manager for a local ready-mix concrete
-                    supplier but they eliminated my position. Finding a new job has been difficult so I decided to go
-                    back to school to learn a new valuable skill that is in high demand.
-
+                    supplier. Unfortunatley my position was eliminated exactly at the time when I thought I would be up
+                    for a promotion.
+                    I found it extremely difficult to find a new
+                    position with the rate of pay I needed
+                    so I felt it was time for a career change. I wanted a job that would be fun yet challenging - but
+                    most important - I wanted a job that would be in high demand.
+                    Something that might make looking for work a little bit easier. So I decided to "go back to school."
                 </p>
             </article>
-        </section>
-        <div class="hidden">
-            <article id="My-Work" class="My-Work">
-                <!--
-
-                <h2>My Work</h2>
-                     -->
-        </div>
-        <div class="layout">
-            <section class="card1">
-                <header>
-                    <h2>My First Project Ever</h2>
-                </header>
-                <article>
-                    <h4>I created this page before I had any formal training.</h4>
-                    <a href="https://jonahkane.github.io/">
-                        <img src="./assets/images/first.png" alt="screenshot of first ever webpage"></a>
-                    <p id="box">
-                        https://jonahkane.github.io/
-                    </p>
-
-                </article>
-            </section>
-            <section class="card2">
-                <header>
-                    <h2>Prework Study Guide</h2>
-                </header>
-                <article>
-                    <h4>This was the first project in my UofM Bootcamp</h4>
-                    <a href="https://jonahkane.github.io/prework-study-guide/">
-                        <img src="./assets/images/prework.png" alt="screenshot of prework study guide webpage"></a>
-                    <p id="box">
-                        https://jonahkane.github.io/prework-study-guide/
-                    </p>
-                </article>
-            </section>
-            <section class="card3">
-                <header>
-                    <h2>Horiseon Project</h2>
-                </header>
-                <article>
-                    <h4> First true homework assignment from bootcamp</h4>
-                    <a href="https://jonahkane.github.io/02-challenge/">
-                        <img src="./assets/images/horiseon.png" alt="screenshot of first homework assignment"></a>
-                    <p id="box">
-                        https://jonahkane.github.io/02-challenge/
-                    </p>
-                </article>
-            </section>
-            <section class="card4">
-                <header>
-                    <h2>Future Project #1</h2>
-                </header>
-                <article>
-                    <h4>Coming Soon!</h4>
-                    <a
-                        href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
-                        <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
-                    <p id="box">
-                        future project link coming soon!
-
-
-
-                </article>
-
-            </section>
-            <section class="card5">
-                <header>
-                    <h2>Future Project #2</h2>
-                </header>
-                <article>
-                    <h4>Coming Soon!</h4>
-                    <a
-                        href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
-                        <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
-                    <p id="box">
-                        future project link coming soon!
-
-                </article>
-
-            </section>
-            <section class="card6">
-                <header>
-                    <h2>Future Project #3</h2>
-                </header>
-                <article>
-                    <h4>Coming Soon!</h4>
-                    <a
-                        href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
-                        <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
-                    <p id="box">
-                        future project link coming soon!
-                </article>
-            </section>
-        </div>
-        <article id="Contact-Me" class="Contact-Me">
-            <!--    
-                <h2>Contact Me</h2>
+            <!--                <h2>My Work</h2>
+                <article id="My-Work" class="My-Work">
             -->
-            <ul>
-                <li>Phone: 952-452-3285</li>
-                <li>Email: JonahTKane@gmail.com</li>
-                <li>Github: GitHub.com/JonahKane</li>
-                <li>LinkedIn: JonahKane.com</li>
-            </ul>
-        </article>
+            </article>
+            </div>
+            <div class="my-work">
+                <section class="card1">
+                    <header>
+                        <h2>My First Project Ever</h2>
+                    </header>
+                    <article>
+                        <h4>I created this page before I had any formal training.</h4>
+                        <a href="https://jonahkane.github.io/">
+                            <img src="./assets/images/first.png" alt="screenshot of first ever webpage"></a>
+
+                    </article>
+                </section>
+                <section class="card2">
+                    <header>
+                        <h2>Prework Study Guide</h2>
+                    </header>
+                    <article>
+                        <h4>This was the first project in my UofM Bootcamp</h4>
+                        <a href="https://jonahkane.github.io/prework-study-guide/">
+                            <img src="./assets/images/prework.png" alt="screenshot of prework study guide webpage"></a>
+                    </article>
+                </section>
+                <section class="card3">
+                    <header>
+                        <h2>Horiseon Project</h2>
+                    </header>
+                    <article>
+                        <h4> First true homework assignment from bootcamp</h4>
+                        <a href="https://jonahkane.github.io/02-challenge/">
+                            <img src="./assets/images/horiseon.png" alt="screenshot of first homework assignment"></a>
+                    </article>
+                </section>
+                <section class="card4">
+                    <header>
+                        <h2>Future Project #1</h2>
+                    </header>
+                    <article>
+                        <h4>Coming Soon!</h4>
+                        <a
+                            href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
+                            <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+
+
+                    </article>
+
+                </section>
+                <section class="card5">
+                    <header>
+                        <h2>Future Project #2</h2>
+                    </header>
+                    <article>
+                        <h4>Coming Soon!</h4>
+                        <a
+                            href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
+                            <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+
+                    </article>
+
+                </section>
+                <section class="card6">
+                    <header>
+                        <h2>Future Project #3</h2>
+                    </header>
+                    <article>
+                        <h4>Coming Soon!</h4>
+                        <a
+                            href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
+                            <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+                    </article>
+                </section>
+            </div>
+            <article id="Contact-Me" class="Contact-Me">
+                <!--    
+                -->
+
+                <ul>
+                    <li>Phone: 952-452-3285</li>
+                    <li>Email: JonahTKane@gmail.com</li>
+                    <li>Github: GitHub.com/JonahKane</li>
+                    <li>LinkedIn: JonahKane.com</li>
+                </ul>
+            </article>
         </section>
     </main>
-    <footer>
-        <h3>Footer here</h3>
+    <footer class="footer">
+        <h3>Made with great care and detail by Jonah Kane</h3>
+        <p> &copy 2022 Jonah Kane</p>
         <button> <a href="#header">Return to top of page</a></button>
     </footer>
 
