--- a/index.html
+++ b/index.html
@@ -5,158 +5,191 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jonah Kane's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Jonah Kane's Portfolio</title>
+
 </head>
 
 <body>
 
-    <header id="header" class="Header">
-        <H1>Jonah Kane's Portfolio</H1>
+
+
+
+
+
+    <header id="navbar" class="navbar">
+        <h1>Jonah Kane's Portfolio</h1>
         <nav>
             <ul>
                 <li>
-                    <button><a href="#About-me">About Me</a></button>
+                    <button><a href="#AM-container">About Me</a></button>
                 </li>
                 <li>
-                    <button><a href="#My-Work">My Work</a></button>
+                    <button><a href="#MW-container">My Work</a></button>
                 </li>
                 <li>
-                    <button><a href="#Contact-Me">Contact Me</a></button>
+                    <button><a href="#CM-container">Contact Me</a></button>
                 </li>
             </ul>
         </nav>
     </header>
+    <div class="aboutme">
 
-    <main>
-
-        <!--       
-        -->
-        <aside class="sections">
-            <section class="about-me">
-                <h3>About Me</h3>
-            </section>
-            <section class="my-work">
-                <h3>My Work</h3>
-            </section>
-            <section class="contact-me">
-                <h3>Contact Me</h3>
-            </section>
-        </aside>
-
-        <section class="content">
-            <article id="About-Me" class="card0">
-                <img src="./assets/images/selfie.png" class="float-left" alt="selfie photo">
+        <section id="AM-container" class="AM-container">
+            <div class="leftside">
                 <h2>About Me</h2>
-                <p>
-                    My name is Jonah Kane. I am a brand new rookie web developer with very limited experience but I have
-                    a whole lot of drive and desire to learn.
-                    I decided to get into this crazy world becuase I lost my job. I spent the last 5 years of my
-                    professional career working as a Dispatch Manager for a local ready-mix concrete
-                    supplier. Unfortunatley my position was eliminated exactly at the time when I thought I would be up
-                    for a promotion.
-                    I found it extremely difficult to find a new
-                    position with the rate of pay I needed
-                    so I felt it was time for a career change. I wanted a job that would be fun yet challenging - but
-                    most important - I wanted a job that would be in high demand.
-                    Something that might make looking for work a little bit easier. So I decided to "go back to school."
-                </p>
-            </article>
-            <!--                <h2>My Work</h2>
-                <article id="My-Work" class="My-Work">
-            -->
-            </article>
             </div>
-            <div class="my-work">
-                <section class="card1">
-                    <header>
-                        <h2>My First Project Ever</h2>
-                    </header>
-                    <article>
-                        <h4>I created this page before I had any formal training.</h4>
-                        <a href="https://jonahkane.github.io/">
-                            <img src="./assets/images/first.png" alt="screenshot of first ever webpage"></a>
+            <div>
+                <article class="strongside">
 
-                    </article>
-                </section>
-                <section class="card2">
-                    <header>
-                        <h2>Prework Study Guide</h2>
-                    </header>
-                    <article>
+
+                    <img src="./assets/images/selfie.png">
+
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quasi earum totam fugit sit,
+                        suscipit consequatur nostrum, pariatur doloremque odio culpa voluptatibus dolor, minima nam
+                        temporibus ullam sint delectus iure labore et mollitia! Dicta ipsa, beatae ducimus quod aperiam
+                        quos quas? Ut sint assumenda exercitationem eos hic dolor illum facilis ad doloremque inventore
+                        provident laboriosam aut autem voluptate id, impedit laudantium, maxime officiis. Nostrum
+                        quisquam at reiciendis amet ut facere dolorem, perferendis recusandae quaerat consequatur
+                        facilis, veritatis quo ex impedit, ad iste exercitationem hic ipsum doloremque soluta. Itaque
+                        asperiores, excepturi dolor doloremque quod natus voluptatibus perspiciatis quis distinctio
+                        sapiente nostrum ducimus doloribus pariatur temporibus. Nisi at saepe libero iure beatae
+                        molestias ipsum, ipsam consequatur sint est quod ut quasi itaque quae possimus cumque maiores
+                        doloremque in praesentium ipsa doloribus dolorem impedit vitae. Aliquam soluta eaque labore
+                        dolore, consequuntur quis repudiandae voluptate quam in laborum at voluptas aspernatur
+                        consectetur rem praesentium!
+                    </p>
+
+                </article>
+            </div>
+        </section>
+    </div>
+
+    <div class="mywork">
+        <section id="MW-container" class="MW-container">
+            <div class="leftside">
+                <article>
+
+                    <h2>My Work</h2>
+            </div>
+
+            <div class="strongside">
+
+
+                <div id="card1" class="card1">
+                    <div>
+                        <h3>My First Project Ever</h3>
+                    </div>
+                    <p>
+                    <h4>I created this page before I had any formal training.</h4>
+                    <a href="https://jonahkane.github.io/">
+                        <img src="./assets/images/first.png" alt="screenshot of first ever webpage"></a>
+                    <h5>Click on the photo to see the page</h5>
+                    </p>
+                </div>
+                </article>
+                <div class="strongside">
+                    <article id="card2" class="cards">
+                        <div>
+                            <h3>Prework Study Guide</h3>
+                        </div>
+                        <p>
                         <h4>This was the first project in my UofM Bootcamp</h4>
                         <a href="https://jonahkane.github.io/prework-study-guide/">
                             <img src="./assets/images/prework.png" alt="screenshot of prework study guide webpage"></a>
+                        <h5>Click on the photo to see the page</h5>
+                        </p>
                     </article>
-                </section>
-                <section class="card3">
-                    <header>
-                        <h2>Horiseon Project</h2>
-                    </header>
-                    <article>
+
+
+                    <article id="card3" class="cards">
+                        <div>
+                            <h3>Horiseon Project</h3>
+                        </div>
+                        <p>
                         <h4> First true homework assignment from bootcamp</h4>
                         <a href="https://jonahkane.github.io/02-challenge/">
                             <img src="./assets/images/horiseon.png" alt="screenshot of first homework assignment"></a>
+                        <h5>Click on the photo to see the page</h5>
+                        </p>
                     </article>
-                </section>
-                <section class="card4">
-                    <header>
-                        <h2>Future Project #1</h2>
-                    </header>
-                    <article>
+                    <article id="card4" class="cards">
+                        <div>
+                            <h3>Future Project #1</h3>
+                        </div>
+                        <p>
                         <h4>Coming Soon!</h4>
                         <a
                             href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
                             <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
-
-
+                        <h5>Click on the photo to see the page</h5>
+                        </p>
                     </article>
 
-                </section>
-                <section class="card5">
-                    <header>
-                        <h2>Future Project #2</h2>
-                    </header>
-                    <article>
+
+                    <article id="card5" class="cards">
+                        <div>
+                            <h3>Future Project #2</h3>
+                        </div>
+                        <p>
                         <h4>Coming Soon!</h4>
                         <a
                             href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
                             <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
-
+                        <h5>Click on the photo to see the page</h5>
+                        </p>
                     </article>
 
-                </section>
-                <section class="card6">
-                    <header>
-                        <h2>Future Project #3</h2>
-                    </header>
-                    <article>
+
+                    <article id="card6" class="cards">
+                        <div>
+                            <h3>Future Project #3</h3>
+                        </div>
+                        <p>
                         <h4>Coming Soon!</h4>
                         <a
                             href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
                             <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+                        <h5>Click on the photo to see the page</h5>
+                        </p>
                     </article>
-                </section>
+                </div>
+
+
+        </section>
+
+    </div>
+
+    <div class="contactme">
+
+        <section id="CM-container" class="CM-container">
+            <div class="leftside">
+                <h2>Contact Me</h2>
             </div>
-            <article id="Contact-Me" class="Contact-Me">
-                <!--    
-                -->
+            <div class="strongside">
+
 
                 <ul>
                     <li>Phone: 952-452-3285</li>
-                    <li>Email: JonahTKane@gmail.com</li>
-                    <li>Github: GitHub.com/JonahKane</li>
+                    <li>Email: Jonahtkane@gmail.com</li>
+                    <li>GitHub: GitHub.com/JonahKane</li>
                     <li>LinkedIn: JonahKane.com</li>
                 </ul>
-            </article>
+
+            </div>
+
         </section>
-    </main>
+    </div>
+    <div class="fixed">
+        <button> <a href="#navbar">Back to top of page</a></button>
+    </div>
     <footer class="footer">
         <h3>Made with great care and detail by Jonah Kane</h3>
         <p> &copy 2022 Jonah Kane</p>
-        <button> <a href="#header">Return to top of page</a></button>
     </footer>
+
+
 
 </body>
 
