correcting merge conflict - trying again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redo of portfolio assignment</title>
+    <title>Jonah Kane's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -34,7 +34,6 @@
             </ul>
         </nav>
     </header>
-
     <div class="aboutme">
 
         <section id="AM-container" class="AM-container">
@@ -47,24 +46,19 @@
 
                     <img src="./assets/images/selfie.png">
 
-                    <p> My name is Jonah Kane. I am a brand new rookie web developer with very limited experience
-                        but I
-                        have
-                        a whole lot of drive and desire to learn.
-                        I decided to get into this crazy world becuase I lost my job. I spent the last 5 years of my
-                        professional career working as a Dispatch Manager for a local ready-mix concrete
-                        supplier. Unfortunatley my position was eliminated exactly at the time when I thought I
-                        would be
-                        up
-                        for a promotion.
-                        I found it extremely difficult to find a new
-                        position with the rate of pay I needed
-                        so I felt it was time for a career change. I wanted a job that would be fun yet challenging
-                        -
-                        but
-                        most important - I wanted a job that would be in high demand.
-                        Something that might make looking for work a little bit easier. So I decided to "go back to
-                        school."
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quasi earum totam fugit sit,
+                        suscipit consequatur nostrum, pariatur doloremque odio culpa voluptatibus dolor, minima nam
+                        temporibus ullam sint delectus iure labore et mollitia! Dicta ipsa, beatae ducimus quod aperiam
+                        quos quas? Ut sint assumenda exercitationem eos hic dolor illum facilis ad doloremque inventore
+                        provident laboriosam aut autem voluptate id, impedit laudantium, maxime officiis. Nostrum
+                        quisquam at reiciendis amet ut facere dolorem, perferendis recusandae quaerat consequatur
+                        facilis, veritatis quo ex impedit, ad iste exercitationem hic ipsum doloremque soluta. Itaque
+                        asperiores, excepturi dolor doloremque quod natus voluptatibus perspiciatis quis distinctio
+                        sapiente nostrum ducimus doloribus pariatur temporibus. Nisi at saepe libero iure beatae
+                        molestias ipsum, ipsam consequatur sint est quod ut quasi itaque quae possimus cumque maiores
+                        doloremque in praesentium ipsa doloribus dolorem impedit vitae. Aliquam soluta eaque labore
+                        dolore, consequuntur quis repudiandae voluptate quam in laborum at voluptas aspernatur
+                        consectetur rem praesentium!
                     </p>
 
                 </article>
@@ -188,7 +182,7 @@
         </section>
     </div>
     <div class="fixed">
-        <button> <a href="#navbar">Return to top of page</a></button>
+        <button> <a href="#navbar">Back to top of page</a></button>
     </div>
     <footer class="footer">
         <h3>Made with great care and detail by Jonah Kane</h3>
