making tweaks to css properties

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <h3>My First Project Ever</h3>
                     </div>
                     <p>
-                    <h4>I created this page before I had any formal training.</h4>
+                    <h4>Created prior to any formal training</h4>
                     <a href="https://jonahkane.github.io/">
                         <img src="./assets/images/first.png" alt="screenshot of first ever webpage"></a>
                     <h5>Click on the photo to see the page</h5>
@@ -94,10 +94,10 @@
                 <div class="strongside">
                     <article id="card2" class="cards">
                         <div>
-                            <h3>Prework Study Guide</h3>
+                            <h3>Prework Project</h3>
                         </div>
                         <p>
-                        <h4>This was the first project in my UofM Bootcamp</h4>
+                        <h4>First project in my UofM Bootcamp</h4>
                         <a href="https://jonahkane.github.io/prework-study-guide/">
                             <img src="./assets/images/prework.png" alt="screenshot of prework study guide webpage"></a>
                         <h5>Click on the photo to see the page</h5>
@@ -110,7 +110,7 @@
                             <h3>Horiseon Project</h3>
                         </div>
                         <p>
-                        <h4> First true homework assignment from bootcamp</h4>
+                        <h4> First bootcamp homework assignment</h4>
                         <a href="https://jonahkane.github.io/02-challenge/">
                             <img src="./assets/images/horiseon.png" alt="screenshot of first homework assignment"></a>
                         <h5>Click on the photo to see the page</h5>
