added group project to portfolio page

--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
                             <h3>Future Project #1</h3>
                         </div>
                         <p>
-                        <h4>Coming Soon!</h4>
-                        <a
-                            href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
-                            <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+                        <h4>Group Project #1</h4>
+                        <a href="https://kheprisol.github.io/brewery-finder/">
+                            <img src="./assets/images/group project 1.png" alt="screenshot of group project 1"> </a>
                         <h5>Click on the photo to see the page</h5>
                         </p>
                     </article>
