added group project #2

--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
 
                     <article id="card5" class="cards">
                         <div>
-                            <h3>Future Project #2</h3>
+                            <h3>First Full Stack App!</h3>
                         </div>
                         <p>
-                        <h4>Coming Soon!</h4>
-                        <a
-                            href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
-                            <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+                        <h4>Movie Review App</h4>
+                        <!-- <a href="movie-review.herokuapp.com"> -->
+                        <img src="assets/images/group project 2.png" alt="screenshot of group project #2"></a>
                         <h5>Click on the photo to see the page</h5>
                         </p>
                     </article>
