added group project #2

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                         </div>
                         <p>
                         <h4>Movie Review App</h4>
-                        <!-- <a href="movie-review.herokuapp.com"> -->
-                        <img src="assets/images/group project 2.png" alt="screenshot of group project #2"></a>
+                        <a href="movie-review.herokuapp.com">
+                            <img src="assets/images/group project 2.png" alt="screenshot of group project #2"></a>
                         <h5>Click on the photo to see the page</h5>
                         </p>
                     </article>
