adding project #3 to page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="strongside">
                     <article id="card2" class="cards">
                         <div>
-                            <h3>Prework Project</h3>
+                            <h3>Prework</h3>
                         </div>
                         <p>
                         <h4>First project in my UofM Bootcamp</h4>
@@ -107,7 +107,7 @@
 
                     <article id="card3" class="cards">
                         <div>
-                            <h3>Horiseon Project</h3>
+                            <h3>Horiseon</h3>
                         </div>
                         <p>
                         <h4> First bootcamp homework assignment</h4>
@@ -118,7 +118,7 @@
                     </article>
                     <article id="card4" class="cards">
                         <div>
-                            <h3>Future Project #1</h3>
+                            <h3>Project #1</h3>
                         </div>
                         <p>
                         <h4>Group Project #1</h4>
@@ -131,10 +131,10 @@
 
                     <article id="card5" class="cards">
                         <div>
-                            <h3>First Full Stack App!</h3>
+                            <h3>Project #2</h3>
                         </div>
                         <p>
-                        <h4>Movie Review App</h4>
+                        <h4>Movie Review - Full Stack App</h4>
                         <a href="movie-review.herokuapp.com">
                             <img src="assets/images/group project 2.png" alt="screenshot of group project #2"></a>
                         <h5>Click on the photo to see the page</h5>
@@ -144,13 +144,12 @@
 
                     <article id="card6" class="cards">
                         <div>
-                            <h3>Future Project #3</h3>
+                            <h3>Project #3</h3>
                         </div>
                         <p>
-                        <h4>Coming Soon!</h4>
-                        <a
-                            href="https://media.istockphoto.com/id/1332167985/photo/coming-soon-neon-sign-the-banner-shining-light-signboard-collection.jpg?b=1&s=170667a&w=0&k=20&c=Le4B-lJt-jXjeAOdlTQptNvN_DmRwWF19ShNc5VY4a4=">
-                            <img src="./assets/images/coming soon.png" alt="coming soon"> </a>
+                        <h4>Java-Rx MERN App</h4>
+                        <a href="https://java-rx.herokuapp.com">
+                            <img src="./assets/images/java-rx.png" alt="java-rx main page"> </a>
                         <h5>Click on the photo to see the page</h5>
                         </p>
                     </article>
