adding project #3 to page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <h3>Horiseon</h3>
                         </div>
                         <p>
-                        <h4> First bootcamp homework assignment</h4>
+                        <h4> First bootcamp assignment</h4>
                         <a href="https://jonahkane.github.io/02-challenge/">
                             <img src="./assets/images/horiseon.png" alt="screenshot of first homework assignment"></a>
                         <h5>Click on the photo to see the page</h5>
